[workspace]
members = [
  "api",
  "proxy"
]
resolver = "2"

[workspace.package]
authors = ["Daniel Imfeld"]
license = "Apache-2.0"

[workspace.dependencies]
# filigree = { version = "0.1.0", features = ["htmx", "maud", "watch-manifest"] }
filigree = { "path" = "../filigree/filigree", features = ["htmx", "maud", "watch-manifest"] }

[profile.dev.package.maud_macros]
opt-level = 3

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
