[workspace]
members = [
  "api",
  "proxy"
]
resolver = "2"

[workspace.package]
authors = ["Daniel Imfeld <dimfeld>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dimfeld/chronicle"
keywords = ["llm", "proxy", "logging", "observability"]

[workspace.dependencies]
filigree = { version = "0.4.1", features = ["tracing", "tracing_export"] }
sqlx = "0.8.0"
sqlx-transparent-json-decode = "3.0.0"
#filigree = { "path" = "../filigree/filigree", features = ["tracing", "tracing_export"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
