[package]
name = "chronicle-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
axum-extra = { version = "0.9.2", features = ["query"] }
axum-htmx = "0.5.0"
axum-jsonschema = "0.8.0"
axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
bytes = "1.5.0"
chronicle-proxy = { path = "../proxy", version = "0.1.0", default-features = false, features = ["postgres", "migrations", "filigree"] }
chrono = "0.4.33"
clap = { version = "4.4.11", features = ["env", "derive"] }
dotenvy = "0.15.7"
error-stack = { version = "0.4.1", features = ["spantrace"] }
eyre = "0.6.11"
filigree.workspace = true
futures = "0.3.30"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
maud = { version = "0.26.0", features = ["axum"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
rust-embed = "8.1.0"
schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
sqlx-transparent-json-decode = "2.2.1"
tera = "1.19.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
url = "2.5.0"
uuid = "1.6.1"

[dev-dependencies]
temp-dir = "0.1.13"
