[package]
name = "chronicle-proxy"
version = "0.1.0"
edition = "2021"
description = "LLM Abstraction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
backon = "0.4.4"
bytes = "1.6.0"
chrono = "0.4.38"
error-stack = "0.4.1"
filigree = { workspace = true, optional = true }
flume = "0.11.0"
itertools = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_path_to_error = "0.1.16"
sqlx = { version = "0.7.4", features = ["any"] }
sqlx-transparent-json-decode = "2.2.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["fs", "macros", "time"] }
toml = "0.8.12"
tracing = "0.1.40"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v7"] }

[features]
default = ["sqlite", "postgres", "any-db"]
any-db = ["sqlx/any"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
filigree = ["dep:filigree"]
migrations = []

[dev-dependencies]
wiremock = "0.6.0"
